revert me: local rmcp

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ rmcp = { version = "0.9", features = ["schemars", "auth"] }
 # Patch for Windows cross-compilation issue with crunchy
 [patch.crates-io]
 crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }
+rmcp = { path = "../rust-sdk/crates/rmcp" }
