add support for Math / Science symbology via Katex
Signed-off-by: Abhijay007 <Abhijay007j@gmail.com>

--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -68,6 +68,7 @@
     "electron-updater": "^6.6.2",
     "electron-window-state": "^5.0.3",
     "express": "^5.1.0",
+    "katex": "^0.16.25",
     "lodash": "^4.17.21",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
@@ -78,8 +79,10 @@
     "react-select": "^5.10.2",
     "react-syntax-highlighter": "^16.1.0",
     "react-toastify": "^11.0.5",
+    "rehype-katex": "^7.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "split-type": "^0.3.4",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
