--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -54,6 +54,31 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-form": "^1.19.3",
+    "@tiptap/extension-blockquote": "^2.8.0",
+    "@tiptap/extension-bold": "^2.8.0",
+    "@tiptap/extension-bullet-list": "^2.8.0",
+    "@tiptap/extension-code": "^2.8.0",
+    "@tiptap/extension-code-block": "^2.8.0",
+    "@tiptap/extension-document": "^2.8.0",
+    "@tiptap/extension-heading": "^2.8.0",
+    "@tiptap/extension-horizontal-rule": "^2.8.0",
+    "@tiptap/extension-image": "^2.8.0",
+    "@tiptap/extension-italic": "^2.8.0",
+    "@tiptap/extension-link": "^2.8.0",
+    "@tiptap/extension-list-item": "^2.8.0",
+    "@tiptap/extension-ordered-list": "^2.8.0",
+    "@tiptap/extension-paragraph": "^2.8.0",
+    "@tiptap/extension-placeholder": "^2.8.0",
+    "@tiptap/extension-strike": "^2.8.0",
+    "@tiptap/extension-table": "^2.8.0",
+    "@tiptap/extension-table-cell": "^2.8.0",
+    "@tiptap/extension-table-header": "^2.8.0",
+    "@tiptap/extension-table-row": "^2.8.0",
+    "@tiptap/extension-text": "^2.8.0",
+    "@tiptap/extension-underline": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "@types/d3": "^7.4.3",
     "@types/react-router-dom": "^5.3.3",
     "ai": "^5.0.14",
     "class-variance-authority": "^0.7.1",
@@ -61,6 +86,7 @@
     "compare-versions": "^6.1.1",
     "cors": "^2.8.5",
     "cronstrue": "^3.2.0",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "electron-log": "^5.4.2",
@@ -70,30 +96,6 @@
     "express": "^5.1.0",
     "framer-motion": "^11.11.17",
     "gsap": "^3.13.0",
-    "@tiptap/react": "^2.8.0",
-    "@tiptap/starter-kit": "^2.8.0",
-    "@tiptap/extension-placeholder": "^2.8.0",
-    "@tiptap/extension-document": "^2.8.0",
-    "@tiptap/extension-paragraph": "^2.8.0",
-    "@tiptap/extension-text": "^2.8.0",
-    "@tiptap/extension-bold": "^2.8.0",
-    "@tiptap/extension-italic": "^2.8.0",
-    "@tiptap/extension-underline": "^2.8.0",
-    "@tiptap/extension-strike": "^2.8.0",
-    "@tiptap/extension-code": "^2.8.0",
-    "@tiptap/extension-code-block": "^2.8.0",
-    "@tiptap/extension-heading": "^2.8.0",
-    "@tiptap/extension-bullet-list": "^2.8.0",
-    "@tiptap/extension-ordered-list": "^2.8.0",
-    "@tiptap/extension-list-item": "^2.8.0",
-    "@tiptap/extension-blockquote": "^2.8.0",
-    "@tiptap/extension-horizontal-rule": "^2.8.0",
-    "@tiptap/extension-link": "^2.8.0",
-    "@tiptap/extension-image": "^2.8.0",
-    "@tiptap/extension-table": "^2.8.0",
-    "@tiptap/extension-table-row": "^2.8.0",
-    "@tiptap/extension-table-cell": "^2.8.0",
-    "@tiptap/extension-table-header": "^2.8.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "matrix-js-sdk": "^34.7.0",
