--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -87,6 +87,7 @@
     "cors": "^2.8.5",
     "cronstrue": "^3.2.0",
     "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "electron-log": "^5.4.2",
