--- a/.github/workflows/terminal-benchmarks.yml
+++ b/.github/workflows/terminal-benchmarks.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # pin@v5
         with:
-          python-version: '3.x'
+          python-version: '3.13'
 
       - name: Install uv
         run: |
