Restore smoke tests

--- a/.github/workflows/pr-smoke-test.yml
+++ b/.github/workflows/pr-smoke-test.yml
@@ -95,53 +95,53 @@ jobs:
       - name: Make Binary Executable
         run: chmod +x target/release/goose
 
-      # - name: Run Smoke Tests with Provider Script
-      #   env:
-      #     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-      #     OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      #     GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-      #     DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-      #     DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-      #     OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      #     XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
-      #     TETRATE_API_KEY: ${{ secrets.TETRATE_API_KEY }}
-      #     HOME: /tmp/goose-home
-      #     GOOSE_DISABLE_KEYRING: 1
-      #     SKIP_BUILD: 1
-      #   run: |
-      #     # Ensure the HOME directory structure exists
-      #     mkdir -p $HOME/.local/share/goose/sessions
-      #     mkdir -p $HOME/.config/goose
+      - name: Run Smoke Tests with Provider Script
+        env:
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+          XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
+          TETRATE_API_KEY: ${{ secrets.TETRATE_API_KEY }}
+          HOME: /tmp/goose-home
+          GOOSE_DISABLE_KEYRING: 1
+          SKIP_BUILD: 1
+        run: |
+          # Ensure the HOME directory structure exists
+          mkdir -p $HOME/.local/share/goose/sessions
+          mkdir -p $HOME/.config/goose
 
-      #     # Run the provider test script (binary already built and downloaded)
-      #     bash scripts/test_providers.sh
+          # Run the provider test script (binary already built and downloaded)
+          bash scripts/test_providers.sh
 
-      # - name: Run MCP Tests
-      #   env:
-      #     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-      #     OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      #     GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-      #     DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-      #     DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-      #     OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      #     TETRATE_API_KEY: ${{ secrets.TETRATE_API_KEY }}
-      #     XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
-      #     HOME: /tmp/goose-home
-      #     GOOSE_DISABLE_KEYRING: 1
-      #     SKIP_BUILD: 1
-      #   run: |
-      #     bash scripts/test_mcp.sh
+      - name: Run MCP Tests
+        env:
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+          TETRATE_API_KEY: ${{ secrets.TETRATE_API_KEY }}
+          XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
+          HOME: /tmp/goose-home
+          GOOSE_DISABLE_KEYRING: 1
+          SKIP_BUILD: 1
+        run: |
+          bash scripts/test_mcp.sh
 
-      # - name: Run Subrecipe Tests
-      #   env:
-      #     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-      #     GOOSE_PROVIDER: anthropic
-      #     GOOSE_MODEL: claude-sonnet-4-5-20250929
-      #     HOME: /tmp/goose-home
-      #     GOOSE_DISABLE_KEYRING: 1
-      #     SKIP_BUILD: 1
-      #   run: |
-      #     bash scripts/test_subrecipes.sh
+      - name: Run Subrecipe Tests
+        env:
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          GOOSE_PROVIDER: anthropic
+          GOOSE_MODEL: claude-sonnet-4-5-20250929
+          HOME: /tmp/goose-home
+          GOOSE_DISABLE_KEYRING: 1
+          SKIP_BUILD: 1
+        run: |
+          bash scripts/test_subrecipes.sh
 
       - name: Set up Python (for error proxy)
         uses: actions/setup-python@v5
