Fix 404 errors for new sessions
- Add guard in syncTabTitleWithBackend to skip new sessions (starting with 'new_')
- Update TabbedChatContainer to only sync existing sessions
- Prevent openExistingSession from trying to sync new session titles
- This eliminates 404 errors when creating new chat tabs

--- a/crates/goose-mcp/Cargo.toml
+++ b/crates/goose-mcp/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 goose = { path = "../goose" }
 mcp-core = { path = "../mcp-core" }
-rmcp = { version = "0.6.0", features = ["server", "client", "transport-io", "macros"] }
+rmcp = { workspace = true, features = ["server", "client", "transport-io", "macros"] }
 anyhow = "1.0.94"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["io-util"] }
@@ -29,7 +29,7 @@ schemars = "1.0"
 lazy_static = "1.5"
 shellexpand = "3.1.0"
 indoc = "2.0.5"
-xcap = "0.0.14"
+xcap = "0.7"
 reqwest = { version = "0.11", features = [
     "json",
     "rustls-tls-native-roots",
