--- a/documentation/package.json
+++ b/documentation/package.json
@@ -13,7 +13,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-detail-pages": "node scripts/generate-detail-pages.js"
+    "generate-detail-pages": "node scripts/generate-detail-pages.js",
+    "serve-static": "node scripts/serve-static.js"
   },
   "dependencies": {
     "@docusaurus/core": "^3.9.2",
