--- a/crates/goose-mcp/Cargo.toml
+++ b/crates/goose-mcp/Cargo.toml
@@ -34,15 +34,15 @@ reqwest = { version = "0.11", features = [
 ], default-features = false }
 async-trait = "0.1.89"
 chrono = { version = "0.4.38", features = ["serde"] }
-etcetera = "0.8.0"
+etcetera = { workspace = true }
 tempfile = "3.8"
 include_dir = "0.7.4"
-webbrowser = "0.8"
+webbrowser = {workspace = true} 
 http-body-util = "0.1.2"
 regex = "1.11.1"
 once_cell = "1.20.2"
-ignore = "0.4"
-lopdf = "0.35.0"
+ignore = { workspace = true }
+lopdf = "0.36.0"
 docx-rs = "0.4.7"
 image = "0.24.9"
 umya-spreadsheet = "2.2.3"
@@ -56,7 +56,7 @@ oauth2 = { version = "5.0.0", features = ["reqwest"] }
 utoipa = { version = "4.1", optional = true }
 hyper = "1"
 serde_with = "3"
-which = "6.0"
+which = {workspace = true} 
 glob = "0.3"
 lru = "0.12"
 tree-sitter = "0.21"
