--- a/crates/goose-cli/Cargo.toml
+++ b/crates/goose-cli/Cargo.toml
@@ -63,6 +63,9 @@ open = "5.3.2"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
 
+[features]
+# disables the update command
+disable-update = []
 
 [dev-dependencies]
 tempfile = "3"
