better markdown! nicer popup scrolling

--- a/crates/goose-tui/Cargo.toml
+++ b/crates/goose-tui/Cargo.toml
@@ -37,6 +37,7 @@ pulldown-cmark = "0.12"
 ulid = "1.2.1"
 syntect = "5.2"
 chrono = { version = "0.4", features = ["serde"] }
+termimad = "0.34.0"
 
 [dev-dependencies]
 tokio = { version = "1.43", features = ["full"] }
