[feat] new shell driven extension
This is an experiment that could replace developer. It didn't work
a year ago, but LLMs have come a long way and want to test some now
very old assumptions

--- a/crates/goose-mcp/Cargo.toml
+++ b/crates/goose-mcp/Cargo.toml
@@ -77,6 +77,7 @@ libc = "0.2"
 mpatch = "=0.2.0"
 tokio-util = "0.7.16"
 clap = { version = "4", features = ["derive"] }
+dirs = "6.0.0"
 
 
 [dev-dependencies]
