--- a/crates/goose-tui/Cargo.toml
+++ b/crates/goose-tui/Cargo.toml
@@ -39,6 +39,7 @@ ulid = "1.2.1"
 syntect = "5.2"
 chrono = { version = "0.4", features = ["serde"] }
 termimad = "0.34.0"
+unicode-width = "0.2.0"
 
 [dev-dependencies]
 tokio = { version = "1.43", features = ["full"] }
